[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
binary-heap-plus = "~0.5.0"
chrono = "~0.4.26"
enum-iterator = "~1.4.1"
getset = "~0.1.2"
once_cell = "~1.18.0"
typed-builder = "0.15.2"

[dependencies.uuid]
version = "~1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
maplit = "~1.0.2"
pretty_assertions = "~1.4.0"
test-case = "~3.1.0"
