[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "todos"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[package.metadata.component.target]
path = "wit"

[dependencies]
lib = { path = "../lib" }
once_cell = "~1.18.0"
paste = "~1.0.14"
wit-bindgen = "~0.9.0"
